install_data(join_paths('elementary-xfce', 'status', '16', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce', 'status', '16'))
install_data(join_paths('elementary-xfce', 'status', '22', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce', 'status', '22'))
install_data(join_paths('elementary-xfce', 'status', '24', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce', 'status', '24'))

install_data(join_paths('elementary-xfce-dark', 'panel', '16', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce-dark', 'panel', '16'))
install_data(join_paths('elementary-xfce-dark', 'panel', '22', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce-dark', 'panel', '22'))
install_data(join_paths('elementary-xfce-dark', 'panel', '24', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce-dark', 'panel', '24'))

install_data(join_paths('elementary-xfce-darker', 'actions', '16', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce-darker', 'actions', '16'))
install_data(join_paths('elementary-xfce-darker', 'actions', '22', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce-darker', 'actions', '22'))
install_data(join_paths('elementary-xfce-darker', 'actions', '24', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'elementary-xfce-darker', 'actions', '24'))

install_data(join_paths('hicolor', '16x16', 'apps', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '16x16', 'apps'))
install_data(join_paths('hicolor', '16x16', 'apps', 'diodon.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '16x16', 'apps'))
install_data(join_paths('hicolor', '22x22', 'apps', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '22x22', 'apps'))
install_data(join_paths('hicolor', '22x22', 'apps', 'diodon.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '22x22', 'apps'))
install_data(join_paths('hicolor', '24x24', 'apps', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '24x24', 'apps'))
install_data(join_paths('hicolor', '24x24', 'apps', 'diodon.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '24x24', 'apps'))
install_data(join_paths('hicolor', '32x32', 'apps', 'diodon.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '32x32', 'apps'))
install_data(join_paths('hicolor', '48x48', 'apps', 'diodon.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', '48x48', 'apps'))
install_data(join_paths('hicolor', 'scalable', 'apps', 'diodon.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor', 'scalable', 'apps'))

install_data(join_paths('ubuntu-mono-dark', 'status', '16', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'ubuntu-mono-dark', 'status', '16'))
install_data(join_paths('ubuntu-mono-dark', 'status', '22', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'ubuntu-mono-dark', 'status', '22'))
install_data(join_paths('ubuntu-mono-dark', 'status', '24', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'ubuntu-mono-dark', 'status', '24'))

install_data(join_paths('ubuntu-mono-light', 'status', '16', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'ubuntu-mono-light', 'status', '16'))
install_data(join_paths('ubuntu-mono-light', 'status', '22', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'ubuntu-mono-light', 'status', '22'))
install_data(join_paths('ubuntu-mono-light', 'status', '24', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'ubuntu-mono-light', 'status', '24'))

install_data(join_paths('Yaru', 'scalable', 'status', 'diodon-panel.svg'),
    install_dir: join_paths(datadir, 'icons', 'Yaru', 'scalable', 'status'))
install_data(join_paths('Yaru', 'scalable', 'apps', 'diodon.svg'),
    install_dir: join_paths(datadir, 'icons', 'Yaru', 'scalable', 'apps'))
